# osu_to_luau_tooling

./: README.md  main.py  pyproject.toml  requirements.txt  ui.py
converter/: __init__.py  models.py  parser.py  pipeline.py  serializers.py
examples/: sample.osu
tests/: test_converter.py
