[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "osu-to-luau-tooling"
version = "0.1.0"
description = "convert osu beatmaps into LUAU tables or JSON."
readme = "README.md"
license = { text = "MIT" }

authors = [
    { name = "luv2trilogy" }
]

keywords = [
    "osu",
    "luau",
    "roblox",
    "beatmap",
    "converter"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

requires-python = ">=3.11"

dependencies = [
    "customtkinter>=5.2.2",
    "tkinterdnd2>=0.4.3"
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[project.scripts]
osu2luau = "main:main"

[tool.setuptools]
include-package-data = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]