[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"


[project]
name = "osu-to-luau-tooling"
version = "0.1.0"
description = "Convert osu! beatmaps into JSON and Luau."
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "customtkinter>=5.2.2",
    "tkinterdnd2>=0.3.0"
]


[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "mypy>=1.10"
]


[project.scripts]
osu2luau = "main:main"


[tool.setuptools]
py-modules = [
    "main",
    "ui"
]

[tool.setuptools.packages.find]
include = [
    "converter*"
]


[tool.ruff]
line-length = 100
target-version = "py311"


[tool.pytest.ini_options]
testpaths = [
    "tests"
]